# pimp-my-python-umgebung

./: LICENSE  README.md  main.py  pyproject.toml
examples/: autocomplete_with_types.py  error_handling_lint.py  formatting_example.py  logging_examples.py  possibly_not_defined.py  shadow_bulltins.py  use_qgis.py
